2001-04-23  Elliot Glaysher <nuriko.chan@home.com>

	* netcomics, Netcomics/Config.pm, Netcomics/HTML.pm: HTML.pm now
	uses Ben's nice Config.pm for options, instead of having to set
	everything manually.
	
2001-04-23  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/Config.pm (processARGV): Added require of Util so that
	mkgmtime is accessible.
	* Netcomics/Factory.pm (list_comics): Fixed syntax error with how
	libdate_sort was being called.  Made %hof a class attribute loaded
	only once for all Factory instances.  Fixed max name & title
	string length algorithm.

2001-04-22  Elliot Glaysher <nuriko.chan@home.com>

	* Netcomics/Factory.pm: Fixed bug that caused "Sort subroutine
	didn't return single value at /usr/lib/perl5/Netcomics/Factory.pm
	line 865." on netcomics -l.
	
2001-04-22  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Modularized the rest of netcomics.

2001-04-02  Elliot Glaysher <nuriko.chan@home.com>

	* netcomics, display_comics, show_comics, Netcomics/*: Added
	explicit GPL statements to the 	beginnings of each file.
	
2001-03-31  Elliot Glaysher <nuriko.chan@home.com>

	* Netcomics/HTML.pm: Bad Elliot! Bad! Don't leave your debugging
	statement in when you commit!
	
2001-03-27  Elliot Glaysher <nuriko.chan@home.com>

	* TODO: After using the new -P function, I updated the TODO
	because of a minor problem in the generation of the index.html
	file.
	
2001-03-26  Elliot Glaysher <nuriko.chan@home.com>

	* netcomics: Modified behaviour of the -P. Now stores just file
	names in the $rli->{'file'}. This modification was neccesary 
	because of my changes to...
	* Netcomics/HTML.pm: Reworked most of HTML.pm. When  -P is
	activated, now creates a seperate set of HTML pages in each
	directory for each comic being archived.
	
2001-03-11  Elliot Glaysher <nuriko.chan@home.com>

	* netcomics: Small change so $rli->{'base'}, $rli->{'page'},
	and $rli->{'exprs'} are deleted from their respective hashes
	before being written to disk.
